# ai-ir2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.ja.md  README.md  config.example.toml  pyproject.toml
docs/en/: analysis-methodology.md  data-format.md
docs/ja/: analysis-methodology.md  data-format.md
src/aiir2/: __init__.py  cli.py  config.py  models.py  pipeline.py  utils.py
src/aiir2/analyze/: activity.py  reviewer.py  roles.py  summarizer.py
src/aiir2/knowledge/: extractor.py  formatter.py
src/aiir2/llm/: client.py
src/aiir2/parser/: defang.py  loader.py  sanitizer.py
src/aiir2/render/: html.py  markdown.py
src/aiir2/render/templates/: report.html
src/aiir2/translate/: translator.py
tests/: conftest.py  test_cli.py  test_config.py  test_pipeline.py
tests/fixtures/: sample_export.json  simulation_export.json
tests/test_analyze/: test_activity.py  test_reviewer.py  test_roles.py  test_summarizer.py
tests/test_knowledge/: test_extractor.py  test_formatter.py
tests/test_llm/: test_client.py
tests/test_parser/: test_defang.py  test_loader.py  test_sanitizer.py
tests/test_render/: test_html.py  test_markdown.py
tests/test_translate/: test_translator.py
