[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiir2"
version = "0.1.0"
description = "AI-powered Incident Response analysis — one-stop Gemini pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "google-genai>=1.0,<2.0",
    "click>=8.1,<9.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<14.0",
    "jinja2>=3.1,<4.0",
]

[project.scripts]
aiir2 = "aiir2.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
